Added analytic tools

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Karol_CharlesK" />
     <meta name="twitter:image" content="/konnectik-logo.png" />
+    <script
+      src="https://api.analyticsfr.com/tracking/analyticsfr.js"
+      data-site-id="QLcnSrOlFDCN"
+      defer
+    ></script>
   </head>
 
   <body>
